--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,12 @@ APP_KEY=
 DRIVE_DISK=local
 SESSION_DRIVER=cookie
 CACHE_VIEWS=false
-DB_CONNECTION=sqlite
+DB_CONNECTION=pg
 PG_HOST=localhost
 PG_PORT=5432
 PG_USER=lucid
 PG_PASSWORD=
 PG_DB_NAME=lucid
+MASTODON_URL=
+WIKIART_ACCESS_CODE=
+WIKIART_SECRET_CODE=
