--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@stouder-io/adonis-scheduler": "^1.0.3",
     "axios": "^1.3.2",
     "axios-retry": "^3.4.0",
+    "execa": "^5.1.1",
     "flowbite": "^1.6.3",
     "luxon": "^3.2.1",
     "masto": "^5.8.0",
@@ -83,5 +84,9 @@
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21"
+  },
+  "volta": {
+    "node": "18.14.2",
+    "npm": "9.5.0"
   }
 }
