fix: show version

--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -18,7 +18,13 @@
   "preloads": [
     "./start/routes",
     "./start/kernel",
-    "./start/events"
+    "./start/events",
+    {
+      "file": "./start/view-data",
+      "environment": [
+        "web"
+      ]
+    }
   ],
   "providers": [
     "./providers/AppProvider",
