feat: cleanup download folder at midnight

--- a/ace-manifest.json
+++ b/ace-manifest.json
@@ -1,5 +1,17 @@
 {
   "commands": {
+    "clean": {
+      "settings": {
+        "loadApp": true,
+        "stayAlive": false
+      },
+      "commandPath": "./commands/Clean",
+      "commandName": "clean",
+      "description": "Clean temp folder",
+      "args": [],
+      "aliases": [],
+      "flags": []
+    },
     "fetch:paintings": {
       "settings": {
         "loadApp": true,
